# segatools

./: .gitignore  README.md  compile.bat  compile.sh  meson.build  segatools.ipr
aimeio/: meson.build
amex/: gpio.c  jvs.c  meson.build
api/: api.c  api.h  config.c  config.h  meson.build
board/: aime-dll.h  config.c  config.h  io3.c  io3.h  io4.c  led1509306-cmd.h  led1509306-frame.c  led1509306.c  led1509306.h  meson.build  rfid-cmd.h  rfid-file.c  rfid-file.h  rfid-frame.c  rfid-frame.h  rfid-rw.c  rfid-rw.h  sg-cmd.h  sg-led-cmd.h  sg-led.c  sg-led.h  sg-nfc-cmd.h  sg-nfc.c  sg-nfc.h  sg-reader.c  sg-reader.h  vfd-cmd.h  vfd-frame.c  vfd-frame.h  vfd.c  vfd.h
carolhook/: carol-dll.c  carol-dll.h  carolhook.def  config.c  config.h  controlbd.c  controlbd.h  dllmain.c  jvs.c  jvs.h  meson.build  serial.c  serial.h  touch.c  touch.h
carolio/: carolio.c  carolio.h  config.c  config.h  meson.build
chunihook/: chunihook.def  config.c  config.h  dllmain.c  led1509306.c  meson.build
chuniio/: chuniio.c  config.c  config.h  meson.build
chusanhook/: chusanhook.def  config.c  config.h  dllmain.c  io4.c  led1509306.c  meson.build
cxbhook/: commio.c  commio.h  config.c  config.h  cxbhook.def  dllmain.c  meson.build
divahook/: dllmain.c
doc/: 15093-06.txt
exdlls/: README.txt
exdlls/amvideoex/: amvideoex.def  dllmain.c  meson.build
exdlls/printerex320a/: config.c  config.h  dllmain.c  meson.build  printerhook.def
exdlls/printerex320fwdl/: config.c  dllmain.c  meson.build  printerhook.def
fgohook/: config.c  config.h  dllmain.c  fgo-dll.c  fgo-dll.h  fgohook.def  io4.c  io4.h  meson.build
fgoio/: config.c  config.h  fgoio.c  fgoio.h  meson.build
gfxhook/: config.c  config.h  d3d11.c  d3d11.h  d3d9.c  d3d9.h  dxgi.c  dxgi.h  gfx.c  meson.build  util.c  util.h
hooklib/: comshark.c  comshark.h  config.c  config.h  dll.c  dns.c  dns.h  gfx.c  gfx.h  meson.build  path.c  path.h  reg.c  spike.c  touch.c  touch.h  window.c  window.h
idzhook/: dllmain.c
jvs/: jvs-cmd.h  jvs-util.c
kemonohook/: config.c  config.h  dllmain.c  kemonohook.def  meson.build
minihook/: dllmain.c  meson.build  minihook.def
mkhook/: config.c  config.h  dllmain.c  jvs.c  jvs.h  meson.build  mkhook.def
mu3hook/: config.c  config.h  dllmain.c  meson.build  mu3hook.def
mu3io/: config.c  config.h  meson.build  mu3io.c
namco/: bngrw.c  bngrw.h  config.c  config.h  keychip.c  keychip.h  meson.build  najv.c  najv.h  namco-jvs-usb.c  namco-jvs-usb.h  strpcb.c  strpcb.h
platform/: config.c  dns.c  dns.h  meson.build  netenv.c  netenv.h  nusec.c  nusec.h  platform.c  vfs.c
printer/: meson.build  printer-stdcall.c  printer-stdcall.h  printer.c  printer.h
synchook/: config.c  config.h  dllmain.c  meson.build  synchook.def
syncio/: config.c  config.h  meson.build  syncio.c  syncio.def  syncio.h  wajv.c  wajv.h
util/: bitmap.c  bitmap.h  dprintf.c  dprintf.h  dump.c  foreground-detect.c  foreground-detect.h  meson.build  trace.c  trace.h
util/ws/: base64.c  handshake.c  sha1.c  ws.c
