util_lib = static_library(
    'util',
    include_directories : inc,
    implicit_include_directories : false,
    c_pch : '../precompiled.h',
    dependencies : [
        capnhook.get_variable('hook_dep'),
        thread_dep
    ],
    sources : [
        'async.c',
        'async.h',
        'bitmap.c',
        'bitmap.h',
        'crc.c',
        'crc.h',
        'dll-bind.c',
        'dll-bind.h',
        'dprintf.c',
        'dprintf.h',
        'dump.c',
        'dump.h',
        'str.c',
        'str.h',
        'nxjson.c',
        'nxjson.h',
        'trace.c',
        'trace.h',
        'foreground-detect.c',
        'foreground-detect.h',
        'ws/base64.c',
        'ws/base64.h',
        'ws/handshake.c',
        'ws/sha1.h',
        'ws/sha1.c',
        'ws/utf8.h',
        'ws/utf8.c',
        'ws/ws.h',
        'ws/ws.c',
    ],
)
